# jurisprudencia-ia

./: README.md  pyproject.toml  requirements.txt  test_system.py
src/: agentic_base.py  coordination_system.py  external_tools.py  main.py  specialized_agents.py
src/static/: index.html
