[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jurisprudencia_ia"
version = "0.1.0"
description = "Sistema agéntico para búsqueda de jurisprudencias SCJN"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "SCJN Team"}]

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]
